# HymsonVision3D

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  env.sh
core/: CMakeLists.txt  Camera.h  CameraCalib.cpp  CameraCalib.h  Cluster.cpp  Cluster.h  Converter.cpp  Converter.h  Curvature.cpp  Curvature.h  Distance.cpp  Distance.h  Feature.cpp  Feature.h  Filter.cpp  Filter.h  Normal.cpp  Normal.h  PlaneDetection.cpp  PlaneDetection.h  Raster.cpp  Raster.h  converter.h
geometry/: CMakeLists.txt  Geometry.h
geometry/2D/: CMakeLists.txt  Curve.cpp  Curve.h  Geometry2D.h  Image.cpp  Image.h  Surface.cpp  Surface.h
geometry/3D/: BoundingBox3D.cpp  BoundingBox3D.h  CMakeLists.txt  Feature.h  Geometry3D.cpp  Geometry3D.h  KDTree.cpp  KDtree.h  Line3D.cpp  Line3D.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  PointCloud.cpp  PointCloud.h
ml/: CMakeLists.txt  ml.h
ml/yolo_3d/: common.hpp  filesystem.hpp  pre_process_data.py  predict.py  segment_3d.cpp  segment_3d.h  train.py  yolo_3d_seg.hpp  yolov8s-seg-p2.yaml
ml/yolo_3d/tools/: convert_labelme2yolo.py  export.sh  export_model.py
pipeline/: AOI_Edge.cpp  AOI_Edge.h  CMakeLists.txt  CalibCamera.cpp  CalibCamera.h  DefectDetection.cpp  DefectDetection.h  DiskLevelMeasurement.cpp  DiskLevelMeasurement.h  GapStepDetection.cpp  GapStepDetection.h  PlanarDegree.cpp  PlanarDegree.h  Preprocess.cpp  Preprocess.h  SegmentationMFD.cpp  SegmentationMFD.h
test/: CMakeLists.txt  convert_tiff.cpp  edge_detect_test.cpp  flip_edge_defects_detection.py  google_test_sample.cpp  logger_test.cpp  splite.cpp  test_CGAL.cpp  test_bspline.cpp  test_calib.cpp  test_calib.yaml  test_defect.cpp  test_ml.cpp  test_plane.cpp  test_plane_2.cpp  test_templatematch.cpp  test_tiff2ply.cpp  test_torch.cpp  test_torch_2.cpp
tools/: convert_bin.py  gen_data.py  gen_label.py  gen_list.py  requirements.txt  run.sh
unitTest/: CMakeLists.txt  convert_tiff.cpp  google_test_sample.cpp
utility/: CMakeLists.txt  Eigen.cpp  Eigen.h  FileSystem.cpp  FileSystem.h  FileTool.cpp  FileTool.h  Hash.h  Logger.h  MathTool.cpp  MathTool.h  fmtfallback.h
